// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backlinks backlink to home page 1`] = `
VFile {
  "contents": "<h1 id=\\"beta\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#beta\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Beta</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"https://foo.com\\">Alpha (vault1)</a></li>
<li><a title=\\"Private\\" style=\\"color: brown\\" href=\\"https://wiki.dendron.so/notes/hfyvYGJZQiUwQaaxQO27q.html\\" target=\\"_blank\\">Omega (vault1) (Private)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks basic 1`] = `
VFile {
  "contents": "<h1 id=\\"beta\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#beta\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Beta</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"alpha\\">Alpha (vault1)</a></li>
<li><a href=\\"omega\\">Omega (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks frontmatter tags multiple 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#test\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
<li><a href=\\"two\\">Two (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks frontmatter tags single 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#test\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks hashtag 1`] = `
VFile {
  "contents": "<h1 id=\\"test\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#test\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Test</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"one\\">One (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`backlinks multiple links 1`] = `
VFile {
  "contents": "<h1 id=\\"one\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#one\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>One</h1>
<hr>
<strong>Backlinks</strong>
<ul>
<li><a href=\\"three\\">Three (vault1)</a></li>
<li><a href=\\"two\\">Two (vault1)</a></li>
</ul>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
